fixed contrast issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -38,7 +38,7 @@ nav a:link, a:visited, a:hover, a:active {
     color: white;
 }
 
-main a:link, a:visited, a:hover, a:active {
+main a:link, main a:visited, main a:hover, main a:active {
     text-decoration: underline;
     color: black;
 }
